# ripleypy

./: .gitignore  README.md  example1.py  example2.py  pyproject.toml  test.py
.github/workflows/: mypy.yml  publish.yml  ruff.yml  wheels.yml
src/ripleypy/: Ripley.py  __init__.py
testdata/: testdata.csv
